# discord-announcements

./: .gitignore  Cargo.toml  build.rs  diesel.toml  docker-compose.yml  example.env
bot/: nodemon.json  package.json
bot/src/: app.js  oneshot-update.js
client/: Cargo.toml
client/src/: main.rs
discord-announcements/: Cargo.toml
discord-announcements/src/: error.rs  lib.rs  schema.rs
discord-announcements/src/error/: db.rs  feed.rs
discord-announcements/src/models/: canvas.rs  db.rs  mod.rs  models.rs
migrations/2022-01-29-112045_feeds/: up.sql
migrations/2022-01-29-112441_backup_feeds/: down.sql  up.sql
migrations/2022-01-29-112556_subscriptions/: down.sql  up.sql
proto/: canvasrss.proto
server/: Cargo.toml
server/src/: main.rs
