[package]
name = "discord-announcements"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
time = { version = "0.3.7", features = ["serde-well-known"] }
quick-xml = { version = "0.22.0", features = ["serialize"] }
reqwest = { version = "0.11.9", features = ["blocking"] }
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost-types = "0.9"
tokio-stream = "0.1.8"
tokio-postgres = "0.7.2"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "time"] }
r2d2 = "0.8.9"

[build-dependencies]
tonic-build = "0.6"
